Basic fungsionalitas dari Ticketing

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,6 +20,9 @@
 .seat-info-selected{
     background-color: yellow;
 }
+.seat-info-last{
+    background-color: green;
+}
 .seat-info{
     border-radius: 100px;
     height: 25px !important;
